// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The FeastAndroidSubscriptions stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuSnsLambdaExperimental",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "mobilepurchasesfeastgoogleacquisitionseventCODElambdaTopicName0F6D4B19": {
      "Value": {
        "Fn::GetAtt": [
          "mobilepurchasesfeastgoogleacquisitionseventCODEsnsqueueBBB527C9",
          "QueueName",
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "mobilepurchasesfeastgoogleacquisitionseventCODElambda69795858": {
      "DependsOn": [
        "mobilepurchasesfeastgoogleacquisitionseventCODElambdaServiceRoleDefaultPolicyFFF83761",
        "mobilepurchasesfeastgoogleacquisitionseventCODElambdaServiceRoleD7BAC56E",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile/CODE/mobile-purchases-feast-google-acquisitions-event-CODE-lambda/mobile-purchases-feast-google-acquisitions-event.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "mobile-purchases-feast-google-acquisitions-event-CODE-lambda",
            "STACK": "mobile",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "mobile-purchases-feast-google-acquisitions-event-CODE-lambda",
        "Handler": "index.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "mobilepurchasesfeastgoogleacquisitionseventCODElambdaServiceRoleD7BAC56E",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-purchases-feast-google-acquisitions-event-CODE-lambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-purchases",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "mobilepurchasesfeastgoogleacquisitionseventCODElambdaAllowInvokefeastsubscriptionsCODEmobilepurchasesfeastgoogleacquisitionseventCODElambdaSnsExistingIncomingEventsTopic1D66AF05676AD11C": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "mobilepurchasesfeastgoogleacquisitionseventCODElambda69795858",
            "Arn",
          ],
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:sns:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Fn::GetAtt": [
                  "mobilepurchasesfeastgoogleacquisitionseventCODEsnsqueueBBB527C9",
                  "QueueName",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "mobilepurchasesfeastgoogleacquisitionseventCODElambdaServiceRoleD7BAC56E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-purchases-feast-google-acquisitions-event-CODE-lambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-purchases",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "mobilepurchasesfeastgoogleacquisitionseventCODElambdaServiceRoleDefaultPolicyFFF83761": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/mobile/CODE/mobile-purchases-feast-google-acquisitions-event-CODE-lambda/mobile-purchases-feast-google-acquisitions-event.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile/mobile-purchases-feast-google-acquisitions-event-CODE-lambda",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile/mobile-purchases-feast-google-acquisitions-event-CODE-lambda/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "mobilepurchasesfeastgoogleacquisitionseventCODElambdaServiceRoleDefaultPolicyFFF83761",
        "Roles": [
          {
            "Ref": "mobilepurchasesfeastgoogleacquisitionseventCODElambdaServiceRoleD7BAC56E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "mobilepurchasesfeastgoogleacquisitionseventCODElambdamobilepurchasesfeastgoogleacquisitionseventCODElambdaSnsExistingIncomingEventsTopicCAFFCA90": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "mobilepurchasesfeastgoogleacquisitionseventCODElambda69795858",
            "Arn",
          ],
        },
        "Protocol": "lambda",
        "Region": {
          "Ref": "AWS::Region",
        },
        "TopicArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:sns:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Fn::GetAtt": [
                  "mobilepurchasesfeastgoogleacquisitionseventCODEsnsqueueBBB527C9",
                  "QueueName",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "mobilepurchasesfeastgoogleacquisitionseventCODEsnsqueueBBB527C9": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "MessageRetentionPeriod": 1209600,
        "QueueName": "mobile-purchases-feast-google-acquisitions-event-CODE-queue",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-purchases",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`The FeastAndroidSubscriptions stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuSnsLambdaExperimental",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "mobilepurchasesfeastgoogleacquisitionseventPRODlambdaTopicName97E04C72": {
      "Value": {
        "Fn::GetAtt": [
          "mobilepurchasesfeastgoogleacquisitionseventPRODsnsqueueE303EB89",
          "QueueName",
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "mobilepurchasesfeastgoogleacquisitionseventPRODlambda2ED2BC21": {
      "DependsOn": [
        "mobilepurchasesfeastgoogleacquisitionseventPRODlambdaServiceRoleDefaultPolicyC46AD51A",
        "mobilepurchasesfeastgoogleacquisitionseventPRODlambdaServiceRole061E7553",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile/PROD/mobile-purchases-feast-google-acquisitions-event-PROD-lambda/mobile-purchases-feast-google-acquisitions-event.zip",
        },
        "Environment": {
          "Variables": {
            "APP": "mobile-purchases-feast-google-acquisitions-event-PROD-lambda",
            "STACK": "mobile",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "mobile-purchases-feast-google-acquisitions-event-PROD-lambda",
        "Handler": "index.handler",
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "mobilepurchasesfeastgoogleacquisitionseventPRODlambdaServiceRole061E7553",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-purchases-feast-google-acquisitions-event-PROD-lambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-purchases",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 30,
      },
      "Type": "AWS::Lambda::Function",
    },
    "mobilepurchasesfeastgoogleacquisitionseventPRODlambdaAllowInvokefeastsubscriptionsPRODmobilepurchasesfeastgoogleacquisitionseventPRODlambdaSnsExistingIncomingEventsTopic121D7CF3E5157E80": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "mobilepurchasesfeastgoogleacquisitionseventPRODlambda2ED2BC21",
            "Arn",
          ],
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:sns:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Fn::GetAtt": [
                  "mobilepurchasesfeastgoogleacquisitionseventPRODsnsqueueE303EB89",
                  "QueueName",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "mobilepurchasesfeastgoogleacquisitionseventPRODlambdaServiceRole061E7553": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "mobile-purchases-feast-google-acquisitions-event-PROD-lambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-purchases",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "mobilepurchasesfeastgoogleacquisitionseventPRODlambdaServiceRoleDefaultPolicyC46AD51A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/mobile/PROD/mobile-purchases-feast-google-acquisitions-event-PROD-lambda/mobile-purchases-feast-google-acquisitions-event.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile/mobile-purchases-feast-google-acquisitions-event-PROD-lambda",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile/mobile-purchases-feast-google-acquisitions-event-PROD-lambda/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "mobilepurchasesfeastgoogleacquisitionseventPRODlambdaServiceRoleDefaultPolicyC46AD51A",
        "Roles": [
          {
            "Ref": "mobilepurchasesfeastgoogleacquisitionseventPRODlambdaServiceRole061E7553",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "mobilepurchasesfeastgoogleacquisitionseventPRODlambdamobilepurchasesfeastgoogleacquisitionseventPRODlambdaSnsExistingIncomingEventsTopic097DFF2E": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "mobilepurchasesfeastgoogleacquisitionseventPRODlambda2ED2BC21",
            "Arn",
          ],
        },
        "Protocol": "lambda",
        "Region": {
          "Ref": "AWS::Region",
        },
        "TopicArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:sns:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Fn::GetAtt": [
                  "mobilepurchasesfeastgoogleacquisitionseventPRODsnsqueueE303EB89",
                  "QueueName",
                ],
              },
            ],
          ],
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "mobilepurchasesfeastgoogleacquisitionseventPRODsnsqueueE303EB89": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "MessageRetentionPeriod": 1209600,
        "QueueName": "mobile-purchases-feast-google-acquisitions-event-PROD-queue",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-purchases",
          },
          {
            "Key": "Stack",
            "Value": "mobile",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SQS::Queue",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;
